made some change in layout

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="grid-1">
                 <div class="discover-content">
                     <h1 class="discover-title">
-                    Discover goodness
+                    Discover Goodness
                     </h1>
                     <p class="text">
                         Bread is the product of baking a mixture of flour, water, salt, yeast and other ingredients. The basic process involves mixing
